package exercicio34_vcRiquinho;


public class ContaCorrente extends Conta {
    
    public ContaCorrente(Double saldo) {
        super(saldo);
    }
    
    
}
