package exercicio34_vcRiquinho;

public class ContaInvestimento extends Conta {
    private Double taxaDeServico;

    public ContaInvestimento(Double saldo) {
        super(saldo);
    }
    
    
}
